# C4HexMeshing

./: .gitignore  .gitmodules  C4HexConfig.cmake.in  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  main.cpp
cmake/: FindNLOPT.cmake
include/C4Hex/Algorithm/: EmbeddingCollapser.hpp  HexExtractor.hpp  IGMInitializer.hpp  IGMUntangler.hpp  MCCollapser.hpp  MCSmoother.hpp  MCSplitter.hpp  PathRouter.hpp  SurfaceRouter.hpp
include/C4Hex/Interface/: HexRemesher.hpp  IGMGenerator.hpp
include/C4Hex/Mesh/: HexMeshProps.hpp  PolyMeshProps.hpp
src/: CMakeLists.txt
src/Algorithm/: EmbeddingCollapser.cpp  HexExtractor.cpp  IGMInitializer.cpp  IGMUntangler.cpp  MCCollapser.cpp  MCSmoother.cpp  MCSplitter.cpp  PathRouter.cpp  SurfaceRouter.cpp
src/Interface/: HexRemesher.cpp  IGMGenerator.cpp
viewer-demo/: CMakeLists.txt  main.cpp
